src/objects/EnvironmentSettings__mdt.object
<CustomObject>
    <description>05 Sep 2017, P Dixon - Holds environment specific setup items eg Heroku endpoints</description>
    <fields>
        <fullName>BillingCalculationEndpoint__c</fullName>
        <description>Endpoint for Heroku billing calculation REST service</description>
        <label>Billing Calculation Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PDFGenerationEndpoint__c</fullName>
        <description>Endpoint for Heroku service that generates a bill PDF based on a pre-defined template</description>
        <label>PDF Generation Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PDFTemplateUploadEndpoint__c</fullName>
        <description>Endpoint for Heroku PDF template upload REST service</description>
        <label>PDF Template Upload Endpoint</label>
        <type>Url</type>
    </fields>
    <label>Environment Settings</label>
    <pluralLabel>Environment Settings</pluralLabel>
</CustomObject>